Transitions and animations do not apply to CSS ::before and ::after pseudo-elements https://bugs.webkit.org/show_bug.cgi?id=92591

Reviewed by Eric Seidel.

.:

Expose Element::pseudoElement for Internals.

* Source/autotools/symbols.filter:

Source/WebCore:

The new DOM based :before and :after pseudo elements support animations
and transitions already, but I had disabled support so we could turn them
on in a separate step. This patch just removes the checks and adds tests.

This also adds two methods to internals to allow pausing animations and
transitions on pseudo elements at predictable locations so the tests
are not flaky.

Tests: fast/css-generated-content/pseudo-animation.html
       fast/css-generated-content/pseudo-transition.html

* WebCore.exp.in:
* page/animation/AnimationController.cpp:
(WebCore::AnimationController::updateAnimations):
* testing/Internals.cpp:
(WebCore::Internals::pauseAnimationAtTimeOnPseudoElement):
(WebCore::Internals::pauseTransitionAtTimeOnPseudoElement):
* testing/Internals.h:
(Internals):
* testing/Internals.idl:

LayoutTests:

Add tests that check if animations and transitions play for pseudo
:before and :after pseudo elements.

* fast/css-generated-content/pseudo-animation-expected.txt: Added.
* fast/css-generated-content/pseudo-animation.html: Added.
* fast/css-generated-content/pseudo-transition-expected.txt: Added.
* fast/css-generated-content/pseudo-transition.html: Added.


Canonical link: https://commits.webkit.org/124116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138632 268f45cc-cd09-0410-ab3c-d52691b4dbfc